[package]
name = "sleepyseal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.2"
bytes = "1"
serde_bytes = "0.11"
bincode = "1.3.3"
flate2 = "1.0"

[dependencies.ed25519-dalek]
version = "1"